--- a/app/globals.css
+++ b/app/globals.css
@@ -4,93 +4,76 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
-  --color-background: var(--background);
-  --color-background-shade: var(--background-shade);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-teko);
-  --font-mono: var(--font-geist-mono);
-  --color-sidebar-ring: var(--sidebar-ring);
-  --color-sidebar-border: var(--sidebar-border);
-  --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
-  --color-sidebar-accent: var(--sidebar-accent);
-  --color-sidebar-primary-foreground: var(--sidebar-primary-foreground);
-  --color-sidebar-primary: var(--sidebar-primary);
-  --color-sidebar-foreground: var(--sidebar-foreground);
-  --color-sidebar: var(--sidebar);
-  --color-chart-5: var(--chart-5);
-  --color-chart-4: var(--chart-4);
-  --color-chart-3: var(--chart-3);
-  --color-chart-2: var(--chart-2);
-  --color-chart-1: var(--chart-1);
-  --color-ring: var(--ring);
-  --color-input: var(--input);
-  --color-border: var(--border);
-  --color-destructive: var(--destructive);
-  --color-accent-foreground: var(--accent-foreground);
-  --color-accent: var(--accent);
-  --color-muted-foreground: var(--muted-foreground);
-  --color-muted: var(--muted);
-  --color-secondary-foreground: var(--secondary-foreground);
-  --color-secondary: var(--secondary);
-  --color-primary-foreground: var(--primary-foreground);
   --color-primary: var(--primary);
-  --color-popover-foreground: var(--popover-foreground);
-  --color-popover: var(--popover);
-  --color-card-foreground: var(--card-foreground);
-  --color-card: var(--card);
+  --color-secondary: var(--secondary);
+  --color-black-p: var(--black-p);
+  --color-black-shade: var(--black-shade);
+  --color-white-p: var(--white-p);
+  --color-white-shade-2: var(--white-shade-2);
+  --color-white-muted: var(--white-muted);
+  --font-lato: var(--font-lato);
+  --font-inter: var(--font-inter);
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
   --radius-lg: var(--radius);
   --radius-xl: calc(var(--radius) + 4px);
+  --text-80px: 80px;
+  --text-45px: 45px;
+  --text-40px: 40px;
+  --text-25px: 25px;
 }
 
 :root {
   --radius: 0.65rem;
-  --background: #0b132b;
-  --background-shade: #1c2541;
-  --foreground: oklch(0.9 0 0);
-  --card: oklch(1 0 0);
-  --card-foreground: oklch(0.141 0.005 285.823);
-  --popover: oklch(1 0 0);
-  --popover-foreground: oklch(0.141 0.005 285.823);
-  --primary: oklch(0.795 0.184 86.047);
-  --primary-foreground: oklch(0.421 0.095 57.708);
-  --secondary: oklch(0.967 0.001 286.375);
-  --secondary-foreground: oklch(0.21 0.006 285.885);
-  --muted: oklch(0.967 0.001 286.375);
-  --muted-foreground: oklch(0.8 0.016 285.938);
-  --accent: oklch(0.967 0.001 286.375);
-  --accent-foreground: oklch(0.21 0.006 285.885);
-  --destructive: oklch(0.577 0.245 27.325);
-  --border: oklch(0.52 0.004 286.32);
-  --input: oklch(0.92 0.004 286.32);
-  --ring: oklch(0.795 0.184 86.047);
-  --chart-1: oklch(0.646 0.222 41.116);
-  --chart-2: oklch(0.6 0.118 184.704);
-  --chart-3: oklch(0.398 0.07 227.392);
-  --chart-4: oklch(0.828 0.189 84.429);
-  --chart-5: oklch(0.769 0.188 70.08);
-  --sidebar: oklch(0.985 0 0);
-  --sidebar-foreground: oklch(0.141 0.005 285.823);
-  --sidebar-primary: oklch(0.795 0.184 86.047);
-  --sidebar-primary-foreground: oklch(0.421 0.095 57.708);
-  --sidebar-accent: oklch(0.967 0.001 286.375);
-  --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
-  --sidebar-border: oklch(0.92 0.004 286.32);
-  --sidebar-ring: oklch(0.795 0.184 86.047);
+  --primary: #a1f65e;
+  --secondary: #524ff5;
+  --black-p: #1d2229;
+  --black-shade: #2c323a;
+  --white-p: #f0f0f0;
+  --white-shade-2: #f2f2f2;
+  --white-muted: #6a6a6a;
 }
 
 @layer base {
-  * {
-    @apply border-border outline-ring/50;
-  }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-white text-black-p;
+  }
+}
+
+@layer components {
+  .h1 {
+    @apply lg:text-80px  font-extrabold font-inter text-[35px];
+  }
+  .h2 {
+    @apply lg:text-45px  font-extrabold font-inter text-[30px];
+  }
+  .h3 {
+    @apply text-40px  font-extrabold font-inter;
+  }
+  .h4 {
+    @apply lg:text-3xl  font-extrabold font-inter text-[25px];
+  }
+  .h5 {
+    @apply lg:text-25px  font-extrabold font-inter text-[22px];
+  }
+  .h6 {
+    @apply text-[22px]  font-extrabold font-inter;
+  }
+  .para {
+    @apply lg:text-xl font-medium font-lato text-white-muted text-[16px];
+  }
+  .hero-shadow {
+    text-shadow: 3px 4px 0px var(--tw-text-shadow-color, rgb(255 255 255));
+    -webkit-text-stroke: 1px #fff;
+    color: transparent;
   }
 }
 
 @layer utilities {
-  .stroke-black {
-    -webkit-text-stroke: 2px var(--color-muted-foreground); /* stroke thickness + color */
+  .stroke-black-text {
+    -webkit-text-stroke: 1px #00000040;
+  }
+  .stroke-white-text {
+    -webkit-text-stroke: 1px #fff;
   }
 }
